# odel

./: .gitignore  .woodpecker.yml  COPYING.rtf  Cargo.toml  ChangeLog.rst  DESIGN.rst  Jenkinsfile  Makefile  Odel.pptx  README.rst  bootstrap-runner.py  index.html  odel-runner.py  params.json  requirements.txt  setup.py
.github/workflows/: rust.yml
bootstrap/: __main__.py  bootstrap.py
odel/: Cargo.toml  __main__.py  build.rs  diuploader.py  odel.py
odel/src/: errors.rs  main.rs
odel/src/soap/: client.rs  common.rs  mod.rs  soap_envelope.rs
odel/src/tririga/: content.rs  dto.rs  gui.rs  mod.rs  transport.rs  tririga.rs
odel/tests/: test_diuploader.py
sample/: A very long sentence to test the file name tri.txt  Fail-Geography-triWorldRegion-triWorldRegion.txt  Geography-triWorldRegion-triWorldRegion.txt  triPeople-triPeople-triEmployee.txt
sample/002/: triPeople-triPeople-triEmployee.txt
windows/: Makefile  Odel.wxs
