[package]
name = "odel"
version = "1.1.0"
authors = ["Nithin Philips <nithin@nithinphilips.com>"]
edition = "2018"
license = "GPLv3"
readme = "README.rst"
publish = false
build = "build.rs"
description = "Uploads data integrator files to IBM TRIRIGA."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
regex =  "1.2"
backoff = "0.1"
itertools = "0.8"
log = "0.4"
stderrlog = "0.4"
clap = { version = "2.33",  features = [ "suggestions", "color", "wrap_help" ] }
reqwest = { version = "0.10", features = ["json", "blocking", "cookies"] }
tokio = { version = "0.2", features = ["full"] }
macro-utils = { git = "https://github.com/nithinphilips/xsd-parser-rs" }
xsd-types = { git = "https://github.com/nithinphilips/xsd-parser-rs" }
yaserde = "0.4"
yaserde_derive = "0.4"
xml-rs = "0.8.3"
xmltree = "0.8.0"
async-trait ="0.1.24"
async-recursion = "0.3.1"
chrono = "0.4.10"
chrono-tz = "0.4"
uuid = { version = "0.8.1", features = ["v4"] }
sha1 = "0.6.0"
url = "2.0"
base64 = "0.11.0"
digest_auth = "0.2.3"
hyper = "0.13.6"
mime = "0.3.16"
mime_multipart = "0.5.2"
httparse = "1.3.4"
buf-read-ext = "0.3.0"
serde = "1.0.111"
serde_json = "1.0.55"
futures = "0.3.5"

[dev-dependencies]
maplit = "1.0.1"

[build-dependencies]
vergen = "3"
